# fairways

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
docs/source/api/: audit.rst
equiml/: __init__.py  audit.py  detection.py  result.py
equiml/metrics/: __init__.py  base.py  continuous.py  discrete.py  registry.py
equiml/mitigation/: __init__.py  base.py
equiml/mitigation/pre/: __init__.py  reweighting.py  wasserstein_repair.py  wasserstein_repair_ot.py
tests/: test_audit.py  test_detection.py
tests/metrics/: test_continuous.py  test_discrete.py
tests/mitigation/pre/: test_reweighting.py  test_wasserstein_repair.py
