[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "equiml"
version = "0.0.1"
description = "Fairness auditing and mitigation for machine learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["fairness", "machine learning", "bias", "audit", "mitigation"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
stats = [
    "scipy>=1.10",
]
viz = [
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/laclauc/equiml"
Repository = "https://github.com/laclauc/equiml"

[tool.setuptools.packages.find]
include = ["equiml*"]